<resources>
    <string name="app_name">Calculator</string>
    <string name="division">%</string>
    <string name="multiplication">*</string>
    <string name="addition">+</string>
    <string name="substraction">-</string>
    <string name="results">Results</string>
    <string name="enter_a_number">Enter Second number</string>
    <string name="enter_a_number1">enter first number</string>
</resources>